--- a/partials/share-buttons.hbs
+++ b/partials/share-buttons.hbs
@@ -4,7 +4,7 @@
         class="js-share facebook"
         title="{{ translate 'partials.shareButtons.shareWithFacebook' }}"
         rel="nofollow">
-        <svg class="u-icon">
+        <svg class="u-icon" aria-hidden="true">
             <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#facebook"/>
         </svg>
         Facebook
@@ -17,7 +17,7 @@
         class="js-share twitter"
         title="{{ translate 'partials.shareButtons.shareWithTwitter' }}"
         rel="nofollow">
-        <svg class="u-icon">
+        <svg class="u-icon" aria-hidden="true">
             <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#twitter"/>
         </svg>
 		Twitter
@@ -30,7 +30,7 @@
         class="js-share gplus"
         title="{{ translate 'partials.shareButtons.shareWithGooglePlus' }}"
         rel="nofollow">
-        <svg class="u-icon">
+        <svg class="u-icon" aria-hidden="true">
             <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#gplus"/>
         </svg>
 		Google+
@@ -43,7 +43,7 @@
         class="js-share pinterest"
         title="{{ translate 'partials.shareButtons.shareWithPinterest' }}"
         rel="nofollow">
-        <svg class="u-icon">
+        <svg class="u-icon" aria-hidden="true">
             <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#pinterest"/>
         </svg>
 		Pinterest
@@ -56,7 +56,7 @@
         class="js-share stumbleupon"
         title="{{ translate 'partials.shareButtons.shareWithStumbleUpon' }}"
         rel="nofollow">
-        <svg class="u-icon">
+        <svg class="u-icon" aria-hidden="true">
             <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#stumbleupon"/>
         </svg>
 		Stumbleupon
@@ -69,7 +69,7 @@
         class="js-share linkedin"
         title="{{ translate 'partials.shareButtons.shareWithLinkedIn' }}"
         rel="nofollow">
-        <svg class="u-icon">
+        <svg class="u-icon" aria-hidden="true">
             <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#linkedin"/>
         </svg>
 		Linkedin
@@ -82,7 +82,7 @@
         class="js-share buffer"
         title="{{ translate 'partials.shareButtons.shareWithBuffer' }}"
         rel="nofollow">
-        <svg class="u-icon">
+        <svg class="u-icon" aria-hidden="true">
             <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#buffer"/>
         </svg>
 		Buffer
