--- a/post.hbs
+++ b/post.hbs
@@ -53,7 +53,7 @@
                             {{/if}}
                             {{#isFeatured}} {{!-- If a post is marked as Featured, display the following code --}}       
                                 <li>
-                                    <svg class="u-icon">
+                                    <svg class="u-icon" aria-hidden="true">
                                         <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#featured"/>
                                     </svg>
                                     Featured
