--- a/404.hbs
+++ b/404.hbs
@@ -1,18 +1,5 @@
 {{> head}}
 
-<div class="container">
-	
-    <header class="top">
-        <a class="logo" href="{{@website.url}}">
-            {{#if @website.logo}}
-                <img src="{{@website.logo}}" alt="{{@website.name}}">
-            {{else}}
-                {{@website.name}}
-            {{/if}}
-        </a>
-        {{> menu menus.mainMenu}}
-    </header>
-
     <main class="main {{#checkIfNone @config.custom.sidebar}}main--full{{/checkIfNone}}">
         <div class="page-header">
             <h1 class="page-header__title">
@@ -21,11 +8,11 @@
             <p class="page-header__desc">
                 {{ translate 'error.description' }}
             </p>
-        </div>
+        </div>{{!-- .page-header --}}
     </main>
 
-    {{#if @config.custom.sidebar}}
-        {{> sidebar}}
-	 {{/if}}
-	
-    {{> footer}}
+{{#if @config.custom.sidebar}}
+    {{> sidebar}}
+{{/if}}
+
+{{> footer}}
