--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,98 +1,96 @@
-<footer class="footer u-small">	
-	
-	 {{#if @config.custom.copyrightText}}
-        <div class="footer__copyright">
-            {{{@config.custom.copyrightText}}}
-        </div>
-    {{/if}}
-	
-    {{#if @config.custom.socialButtons}}
-        <div class="footer__social">
-            {{#if @config.custom.socialFacebook}}
-                <a href="{{@config.custom.socialFacebook}}" title="Facebook" aria-label="Facebook">
-                    <svg class="u-icon">
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#facebook"/>
-                    </svg>
-                </a>
+        <footer class="footer u-small">
+            {{#if @config.custom.copyrightText}}
+                <div class="footer__copyright">
+                    {{{@config.custom.copyrightText}}}
+                </div>
             {{/if}}
-            {{#if @config.custom.socialTwitter}}
-                <a href="{{@config.custom.socialTwitter}}" title="Twitter" aria-label="Twitter">
-                    <svg class="u-icon">
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#twitter"/>
-                    </svg>
-                </a>
-            {{/if}}
-            {{#if @config.custom.socialGoogleplus}}
-                <a href="{{@config.custom.social_googleplus}}" title="Google+" aria-label="Google+">
-                    <svg class="u-icon">
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#gplus"/>
-                    </svg>
-                </a>
-            {{/if}}
-            {{#if @config.custom.socialInstagram}}
-                <a href="{{@config.custom.socialInstagram}}" title="Instagram" aria-label="Instagram">
-                    <svg class="u-icon">
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#instagram"/>
-                    </svg>
-                </a>
-            {{/if}}
-            {{#if @config.custom.socialLinkedin}}
-                <a href="{{@config.custom.socialLinkedin}}" title="LinkedIn" aria-label="LinkedIn">
-                    <svg class="u-icon">
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#linkedin"/>
-                    </svg>
-                </a>
-            {{/if}}
-            {{#if @config.custom.socialVimeo}}
-                <a href="{{@config.custom.socialVimeo}}" title="Vimeo" aria-label="Vimeo">
-                    <svg class="u-icon">
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#vimeo"/>
-                    </svg>
-                </a>
-            {{/if}}
-            {{#if @config.custom.socialPinterest}}
-                <a href="{{@config.custom.socialPinterest}}" title="Pinterest" aria-label="Pinterest">
-                    <svg class="u-icon">
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#pinterest"/>
-                    </svg>
-                </a>
-            {{/if}}
-            {{#if @config.custom.socialYoutube}}
-                <a href="{{@config.custom.socialYoutube}}" title="Youtube" aria-label="Youtube">
-                    <svg class="u-icon">
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#youtube"/>
-                    </svg>
-                </a>
-            {{/if}}
-        </div>
-    {{/if}}
-   
-</footer>
-</div>
 
-<script>
-	var loadCSSFiles = function() {
-		var links = ['https://fonts.googleapis.com/css?family=PT+Serif|Roboto:400,700&amp;subset=latin-ext'],
-			headElement = document.getElementsByTagName('head')[0],
-			linkElement, i;
-		for (i = 0; i < links.length; i++) {
-			linkElement = document.createElement('link');
-			linkElement.rel = 'stylesheet';
-			linkElement.href = links[i];
-			headElement.appendChild(linkElement);
-		}
-	};
-	var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
-	if (raf) {
-		raf(loadCSSFiles);
-	} else {
-		window.addEventListener('load', loadCSSFiles);
-	}
-</script>
-<script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" aria-dropeffect="" crossorigin="anonymous"></script>
-<script defer src="{{js "scripts.min.js"}}"></script>
+            {{#if @config.custom.socialButtons}}
+                <div class="footer__social">
+                    {{#if @config.custom.socialFacebook}}
+                        <a href="{{@config.custom.socialFacebook}}" title="Facebook" aria-label="Facebook">
+                            <svg class="u-icon">
+                                <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#facebook"/>
+                            </svg>
+                        </a>
+                    {{/if}}
+                    {{#if @config.custom.socialTwitter}}
+                        <a href="{{@config.custom.socialTwitter}}" title="Twitter" aria-label="Twitter">
+                            <svg class="u-icon">
+                                <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#twitter"/>
+                            </svg>
+                        </a>
+                    {{/if}}
+                    {{#if @config.custom.socialGoogleplus}}
+                        <a href="{{@config.custom.social_googleplus}}" title="Google+" aria-label="Google+">
+                            <svg class="u-icon">
+                                <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#gplus"/>
+                            </svg>
+                        </a>
+                    {{/if}}
+                    {{#if @config.custom.socialInstagram}}
+                        <a href="{{@config.custom.socialInstagram}}" title="Instagram" aria-label="Instagram">
+                            <svg class="u-icon">
+                                <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#instagram"/>
+                            </svg>
+                        </a>
+                    {{/if}}
+                    {{#if @config.custom.socialLinkedin}}
+                        <a href="{{@config.custom.socialLinkedin}}" title="LinkedIn" aria-label="LinkedIn">
+                            <svg class="u-icon">
+                                <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#linkedin"/>
+                            </svg>
+                        </a>
+                    {{/if}}
+                    {{#if @config.custom.socialVimeo}}
+                        <a href="{{@config.custom.socialVimeo}}" title="Vimeo" aria-label="Vimeo">
+                            <svg class="u-icon">
+                                <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#vimeo"/>
+                            </svg>
+                        </a>
+                    {{/if}}
+                    {{#if @config.custom.socialPinterest}}
+                        <a href="{{@config.custom.socialPinterest}}" title="Pinterest" aria-label="Pinterest">
+                            <svg class="u-icon">
+                                <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#pinterest"/>
+                            </svg>
+                        </a>
+                    {{/if}}
+                    {{#if @config.custom.socialYoutube}}
+                        <a href="{{@config.custom.socialYoutube}}" title="Youtube" aria-label="Youtube">
+                            <svg class="u-icon">
+                                <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#youtube"/>
+                            </svg>
+                        </a>
+                    {{/if}}
+                </div>
+            {{/if}}
+        </footer>
+    </div>{{!-- .container --}}
 
-{{{@footerCustomCode}}}
+    <script>
+        var loadCSSFiles = function() {
+            var links = ['https://fonts.googleapis.com/css?family=PT+Serif|Roboto:400,700&amp;subset=latin-ext'],
+                headElement = document.getElementsByTagName('head')[0],
+                linkElement, i;
+            for (i = 0; i < links.length; i++) {
+                linkElement = document.createElement('link');
+                linkElement.rel = 'stylesheet';
+                linkElement.href = links[i];
+                headElement.appendChild(linkElement);
+            }
+        };
+        var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
+        if (raf) {
+            raf(loadCSSFiles);
+        } else {
+            window.addEventListener('load', loadCSSFiles);
+        }
+    </script>
+    <script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" aria-dropeffect="" crossorigin="anonymous"></script>
+    <script defer src="{{js "scripts.min.js"}}"></script>
+
+    {{{@footerCustomCode}}}
 
 </body>
 </html>
