--- a/partials/menu.hbs
+++ b/partials/menu.hbs
@@ -1,6 +1,7 @@
+{{!-- We need to display nav element only at first level --}}
 {{#unless level}}
 <nav class="navbar js-navbar">
-	<button class="navbar__toggle js-navbar__toggle">{{ translate 'partials.menu.label' }}</button>
+    <button class="navbar__toggle js-navbar__toggle">{{ translate 'partials.menu.label' }}</button>
 {{/unless}}
     <ul{{#if level}} class="navbar__submenu" {{else}} class="navbar__menu"{{/if}}>
         {{#each items}}
@@ -17,6 +18,7 @@
         </li>
         {{/each}}
     </ul>
+{{!-- We need to display nav element only at first level --}}
 {{#unless level}}
 </nav>
 {{/unless}}
