--- a/tag.hbs
+++ b/tag.hbs
@@ -1,22 +1,8 @@
 {{> head}}
 
-<div class="container">
-
-    <header class="top">
-        <a class="logo" href="{{@website.url}}">
-            {{#if @website.logo}}
-                <img src="{{@website.logo}}" alt="{{@website.name}}">
-            {{else}}
-                {{@website.name}}
-            {{/if}}
-        </a>
-        {{> menu menus.mainMenu}}
-    </header>
-
     <main class="main main--grid {{#checkIfNone @config.custom.sidebar}}main--full{{/checkIfNone}}">
-
         <div class="page-header page-header--listing">
-            {{#tag}}                
+            {{#tag}}
                 <h1 class="page-header__title">
                     {{name}}
                     <sup>({{postsNumber}})</sup>
@@ -27,11 +13,10 @@
                     </p>
                 {{/if}}
             {{/tag}}
-        </div>
+        </div>{{!-- .page-header --}}
 
         {{#each posts}}
             <article class="article">
-
                 {{#featuredImage}}
                     {{#if url}}
                         <a href="{{../url}}" class="card__image">
@@ -48,14 +33,14 @@
                    <h2 class="article__title">
                         <a href="{{url}}">{{title}}</a>
                     </h2>
-					
+
                     {{#if excerpt}}
                         <p>{{{excerpt}}}</p>
                     {{/if}}
 
                     {{#checkIfAny @config.custom.frontAuthor @config.custom.frontDate}}
                         <p class="article__meta u-small">
-							
+
                             {{#if @config.custom.frontAuthor}}
                                 {{#author}}
                                     <a href="{{url}}" title="{{name}}">
@@ -66,7 +51,7 @@
                                     </a>
                                 {{/author}}
                             {{/if}}
-							
+
                             {{#if @config.custom.frontDate}}
                                 <time datetime="{{date createdAt 'YYYY-MM-DDTHH:mm'}}">
                                     {{date createdAt @config.custom.formatDate}}
@@ -74,17 +59,15 @@
                             {{/if}}
                         </p>
                     {{/checkIfAny}}
-
                 </header>
             </article>
         {{/each}}
 
         {{> pagination}}
-
     </main>
 
-   {{#if @config.custom.sidebar}}
-        {{> sidebar}}
-	 {{/if}}
-	
-    {{> footer}}
+{{#if @config.custom.sidebar}}
+    {{> sidebar}}
+{{/if}}
+
+{{> footer}}
