--- a/author.hbs
+++ b/author.hbs
@@ -22,7 +22,7 @@
             <article class="article">
                 {{#featuredImage}}
                     {{#if url}}
-                        <a href="{{../url}}" class="card__image">
+                        <a href="{{../url}}">
                             <img
                                 src="{{url}}"
                                 sizes="{{sizes.listing}}"
