--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
 article,
 aside,
 footer,
@@ -8,14 +16,6 @@ main,
 nav,
 section {
   display: block; }
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0; }
 
 li {
   list-style: none; }
@@ -31,13 +31,11 @@ select,
 textarea {
   font: inherit; }
 
-/* Typography
-   ========================================================================== 
-*/
 html {
   font-size: 1rem; }
   @media screen and (min-width: 20rem) {
     html {
+      font-size: -webkit-calc(1rem + 0.2 * ((100vw - 20rem) / 113));
       font-size: calc(1rem + 0.2 * ((100vw - 20rem) / 113)); } }
   @media screen and (min-width: 133rem) {
     html {
@@ -71,11 +69,14 @@ ul,
 ol,
 dl,
 table {
+  margin-top: -webkit-calc(1.33333rem + 0.5vw);
   margin-top: calc(1.33333rem + 0.5vw); }
 
 blockquote,
 figure {
+  margin-top: -webkit-calc(1.86667rem + 0.5vw);
   margin-top: calc(1.86667rem + 0.5vw);
+  margin-bottom: -webkit-calc(1.86667rem + 0.5vw);
   margin-bottom: calc(1.86667rem + 0.5vw); }
 
 h1,
@@ -88,6 +89,7 @@ h6 {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   line-height: 1.2;
+  margin-top: -webkit-calc(1.86667rem + 0.5vw);
   margin-top: calc(1.86667rem + 0.5vw); }
 
 h1 {
@@ -96,6 +98,7 @@ h1 {
     font-size: 1.67583rem; }
     @media screen and (min-width: 20rem) {
       h1 {
+        font-size: -webkit-calc(1.67583rem + 0.4936 * ((100vw - 20rem) / 113));
         font-size: calc(1.67583rem + 0.4936 * ((100vw - 20rem) / 113)); } }
     @media screen and (min-width: 133rem) {
       h1 {
@@ -105,6 +108,7 @@ h2 {
   font-size: 1.29454rem; }
   @media screen and (min-width: 20rem) {
     h2 {
+      font-size: -webkit-calc(1.29454rem + 0.27655 * ((100vw - 20rem) / 113));
       font-size: calc(1.29454rem + 0.27655 * ((100vw - 20rem) / 113)); } }
   @media screen and (min-width: 133rem) {
     h2 {
@@ -114,6 +118,7 @@ h3 {
   font-size: 1.13778rem; }
   @media screen and (min-width: 20rem) {
     h3 {
+      font-size: -webkit-calc(1.13778rem + 0.24306 * ((100vw - 20rem) / 113));
       font-size: calc(1.13778rem + 0.24306 * ((100vw - 20rem) / 113)); } }
   @media screen and (min-width: 133rem) {
     h3 {
@@ -123,6 +128,7 @@ h4 {
   font-size: 1.06667rem; }
   @media screen and (min-width: 20rem) {
     h4 {
+      font-size: -webkit-calc(1.06667rem + 0.14696 * ((100vw - 20rem) / 113));
       font-size: calc(1.06667rem + 0.14696 * ((100vw - 20rem) / 113)); } }
   @media screen and (min-width: 133rem) {
     h4 {
@@ -132,6 +138,7 @@ h5 {
   font-size: 0.9375rem; }
   @media screen and (min-width: 20rem) {
     h5 {
+      font-size: -webkit-calc(0.9375rem + 0.12917 * ((100vw - 20rem) / 113));
       font-size: calc(0.9375rem + 0.12917 * ((100vw - 20rem) / 113)); } }
   @media screen and (min-width: 133rem) {
     h5 {
@@ -141,6 +148,7 @@ h6 {
   font-size: 0.87891rem; }
   @media screen and (min-width: 20rem) {
     h6 {
+      font-size: -webkit-calc(0.87891rem + 0.12109 * ((100vw - 20rem) / 113));
       font-size: calc(0.87891rem + 0.12109 * ((100vw - 20rem) / 113)); } }
   @media screen and (min-width: 133rem) {
     h6 {
@@ -151,6 +159,7 @@ h3 + p,
 h4 + p,
 h5 + p,
 h6 + p {
+  margin-top: -webkit-calc(0.8rem + 0.25vw);
   margin-top: calc(0.8rem + 0.25vw); }
 
 b,
@@ -193,6 +202,7 @@ dl dt {
   font-weight: 700; }
 
 pre {
+  margin: -webkit-calc(1.06667rem + 0.25vw) 0 0;
   margin: calc(1.06667rem + 0.25vw) 0 0;
   padding: 1.6rem 3.2rem;
   white-space: pre-wrap;
@@ -238,6 +248,7 @@ sup {
 button {
   background: #3949ab;
   border: none;
+  -webkit-border-radius: 50px;
   border-radius: 50px;
   color: #ffffff;
   cursor: pointer;
@@ -286,6 +297,7 @@ button {
 
 fieldset {
   border: 1px solid #d6d6d6;
+  -webkit-border-radius: 6px;
   border-radius: 6px;
   margin: 0 0 1.6rem;
   padding: 1.6rem; }
@@ -313,6 +325,7 @@ textarea,
 select {
   background-color: #ffffff;
   border: 1px solid #d6d6d6;
+  -webkit-border-radius: 50px;
   border-radius: 50px;
   font-size: 1rem;
   outline: none;
@@ -357,6 +370,7 @@ select {
 .checkbox:before,
 .radio:before {
   border: 1px solid #d6d6d6;
+  -webkit-border-radius: 2px;
   border-radius: 2px;
   content: "";
   display: inline-block;
@@ -368,6 +382,7 @@ select {
   width: 1.33333rem; }
 
 .radio:before {
+  -webkit-border-radius: 50%;
   border-radius: 50%; }
 
 [type=checkbox]:checked + .checkbox:before {
@@ -392,10 +407,12 @@ select {
   position: relative; }
   select:not([multiple]) {
     background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 6 6"><polygon points="3 6 3 6 0 0 6 0 3 6" fill="%238a8b8c"/></svg>') no-repeat 90% 50%;
+    -webkit-background-size: 8px 8px;
     background-size: 8px;
     padding-right: 3.2rem; }
 
 select[multiple] {
+  -webkit-border-radius: 6px;
   border-radius: 6px;
   padding: 1.6rem;
   width: 100%; }
@@ -410,15 +427,16 @@ select[multiple] {
       border-color: #d6d6d6; }
 
 textarea {
+  -webkit-border-radius: 6px;
   border-radius: 6px;
   display: block;
   overflow: auto;
   resize: vertical;
   max-width: 100%; }
 
-/* Main columns  ------------------------- */
 .container {
   display: grid;
+  grid-gap: -webkit-calc(1.86667rem + 0.5vw);
   grid-gap: calc(1.86667rem + 0.5vw);
   grid-template-columns: 1fr auto 1fr; }
   @media all and (min-width: 56.25em) {
@@ -446,6 +464,7 @@ textarea {
     -ms-flex-line-pack: start;
     align-content: start;
     display: grid;
+    grid-gap: -webkit-calc(1.86667rem + 0.5vw);
     grid-gap: calc(1.86667rem + 0.5vw); }
     @media all and (min-width: 37.5em) {
       .main--grid {
@@ -459,7 +478,6 @@ textarea {
     .sidebar {
       grid-column: 3/4; } }
 
-/* Content blocks  ------------------------- */
 @media all and (min-width: 37.5em) {
   .hero,
   .page-header--listing {
@@ -469,6 +487,7 @@ textarea {
   .featured-posts {
     grid-column: span 6;
     display: grid;
+    grid-column-gap: -webkit-calc(1.86667rem + 0.5vw);
     grid-column-gap: calc(1.86667rem + 0.5vw);
     grid-template-columns: repeat(3, 1fr); }
     .featured-posts > h3 {
@@ -478,7 +497,6 @@ textarea {
   .pagination {
     grid-column: span 6; } }
 
-/* Header ------------------------ */
 .top {
   -webkit-box-align: center;
   -webkit-align-items: center;
@@ -492,10 +510,10 @@ textarea {
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
+  margin-top: -webkit-calc(1.86667rem + 0.5vw);
   margin-top: calc(1.86667rem + 0.5vw);
   position: relative; }
 
-/* Logo ------------------------ */
 .logo {
   color: #343434 !important;
   font-family: "Roboto", sans-serif;
@@ -504,6 +522,7 @@ textarea {
     font-size: 1.4729rem; }
     @media screen and (min-width: 20rem) {
       .logo {
+        font-size: -webkit-calc(1.4729rem + 0.43382 * ((100vw - 20rem) / 113));
         font-size: calc(1.4729rem + 0.43382 * ((100vw - 20rem) / 113)); } }
     @media screen and (min-width: 133rem) {
       .logo {
@@ -512,7 +531,6 @@ textarea {
     .logo {
       margin: 0; } }
 
-/* Navigation ------------------------ */
 .navbar__menu {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
@@ -635,6 +653,7 @@ textarea {
   background: none;
   border: none;
   border-top: 2px solid #343434;
+  -webkit-border-radius: 0;
   border-radius: 0;
   display: block;
   height: 14px;
@@ -727,15 +746,18 @@ textarea {
     margin-top: 0.53333rem; }
 
 .box {
+  margin-bottom: -webkit-calc(3.2rem + 1vw);
   margin-bottom: calc(3.2rem + 1vw); }
   .box--gray {
     background: #f7f7f8;
+    padding: -webkit-calc(1.86667rem + 0.5vw);
     padding: calc(1.86667rem + 0.5vw); }
     .box--gray > .box__title {
       border-top: none;
       padding-top: 0; }
   .box__title {
     color: #3949ab;
+    margin: 0 0 -webkit-calc(1.86667rem + 0.5vw);
     margin: 0 0 calc(1.86667rem + 0.5vw); }
   .box ul {
     margin-left: 0; }
@@ -743,6 +765,7 @@ textarea {
 .owner {
   text-align: center; }
   .owner > img {
+    -webkit-border-radius: 50%;
     border-radius: 50%;
     max-width: 7rem; }
   .owner > p {
@@ -764,6 +787,7 @@ textarea {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    margin: 0 0 -webkit-calc(1.6rem + 0.75vw);
     margin: 0 0 calc(1.6rem + 0.75vw);
     padding: 0; }
   .authors__img {
@@ -789,7 +813,6 @@ textarea {
   font-size: 0.77248rem;
   margin: 0 0 1.06667rem; }
 
-/* Common  ------------------------- */
 .u-small {
   color: #908e98;
   font-family: "Roboto", sans-serif;
@@ -804,7 +827,6 @@ textarea {
   -o-transition: all 0.24s ease-out;
   transition: all 0.24s ease-out; }
 
-/* Hero sections  ------------------------- */
 .hero {
   height: 29rem;
   position: relative; }
@@ -832,21 +854,24 @@ textarea {
     button {
       margin-top: 1.6rem; }
 
-/* Category  ------------------------ */
 .page-header {
   border-top: 3px solid #343434;
+  padding-top: -webkit-calc(1.86667rem + 0.5vw);
   padding-top: calc(1.86667rem + 0.5vw); }
   .page-header__title {
     color: #3949ab; }
   .page-header__desc {
+    margin-top: -webkit-calc(0.26667rem + 0.5vw);
     margin-top: calc(0.26667rem + 0.5vw); }
 
 .article {
+  margin-bottom: -webkit-calc(1.6rem + 0.5vw);
   margin-bottom: calc(1.6rem + 0.5vw); }
   .article__title {
     font-size: 1.13778rem; }
     @media screen and (min-width: 20rem) {
       .article__title {
+        font-size: -webkit-calc(1.13778rem + 0.07585 * ((100vw - 20rem) / 113));
         font-size: calc(1.13778rem + 0.07585 * ((100vw - 20rem) / 113)); } }
     @media screen and (min-width: 133rem) {
       .article__title {
@@ -865,6 +890,7 @@ textarea {
     -ms-flex-pack: justify;
     justify-content: space-between; }
     .article__meta__avatar {
+      -webkit-border-radius: 50%;
       border-radius: 50%;
       height: 2.13333rem;
       margin-right: 0.8rem;
@@ -872,11 +898,12 @@ textarea {
       display: inline-block;
       vertical-align: middle; }
 
-/* Article  ------------------------ */
 .post {
   border-top: 3px solid #343434;
+  padding-top: -webkit-calc(1.86667rem + 0.5vw);
   padding-top: calc(1.86667rem + 0.5vw); }
   .post__meta {
+    margin: -webkit-calc(1.06667rem + 0.25vw) 0 0 0;
     margin: calc(1.06667rem + 0.25vw) 0 0 0; }
     .post__meta > li {
       display: inline-block;
@@ -887,10 +914,12 @@ textarea {
         vertical-align: top; }
   .post__image--left {
     float: left;
+    margin-right: -webkit-calc(1.86667rem + 0.5vw);
     margin-right: calc(1.86667rem + 0.5vw);
     max-width: 50%; }
   .post__image--right {
     float: right;
+    margin-left: -webkit-calc(1.86667rem + 0.5vw);
     margin-left: calc(1.86667rem + 0.5vw);
     max-width: 50%; }
   .post__image--center {
@@ -903,6 +932,7 @@ textarea {
   .post__image--full {
     text-align: center; }
   .post__entry {
+    margin-top: -webkit-calc(1.86667rem + 1vw);
     margin-top: calc(1.86667rem + 1vw); }
     @media all and (max-width: 56.1875em) {
       .post__entry {
@@ -926,20 +956,24 @@ textarea {
     .post__entry a:hover {
       text-decoration: underline; }
   .post__footer {
+    margin-top: -webkit-calc(1.86667rem + 0.5vw);
     margin-top: calc(1.86667rem + 0.5vw); }
     @media all and (max-width: 37.4375em) {
       .post__footer {
         text-align: center; } }
     .post__footer > .box {
       border-top: 1px solid #e3e3e3;
+      padding-top: -webkit-calc(1.86667rem + 0.5vw);
       padding-top: calc(1.86667rem + 0.5vw);
       text-align: center; }
   .post__last-updated {
     color: #908e98;
     font-size: 0.77248rem;
+    margin-bottom: -webkit-calc(1.86667rem + 0.5vw);
     margin-bottom: calc(1.86667rem + 0.5vw); }
   .post__share > a {
     background: #f7f7f8;
+    -webkit-border-radius: 50px;
     border-radius: 50px;
     display: inline-block;
     font-family: "Roboto", sans-serif;
@@ -958,12 +992,14 @@ textarea {
       display: inline-block; }
       .post__tag li > a {
         background: #f7f7f8;
+        -webkit-border-radius: 50px;
         border-radius: 50px;
         display: inline-block;
         font-family: "Roboto", sans-serif;
         font-size: 0.77248rem;
         padding: 0.53333rem 1.6rem; }
   .post__bio > img {
+    -webkit-border-radius: 50%;
     border-radius: 50%;
     height: 4.8rem;
     width: 4.8rem; }
@@ -978,6 +1014,7 @@ textarea {
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    margin-bottom: -webkit-calc(1.86667rem + 0.5vw);
     margin-bottom: calc(1.86667rem + 0.5vw); }
     .post__nav__link {
       color: #717171; }
@@ -1034,6 +1071,7 @@ textarea {
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
+    margin: -webkit-calc(1.86667rem + 0.5vw) -2% 0;
     margin: calc(1.86667rem + 0.5vw) -2% 0;
     width: 104%; }
     @media all and (min-width: 56.25em) {
@@ -1060,29 +1098,30 @@ textarea {
       font-size: 0.87891rem;
       margin: 1.6rem 0 0.53333rem; }
 
-/* Comments ------------------------ */
 .comments {
   border-top: 1px solid #e3e3e3;
+  padding-top: -webkit-calc(1.86667rem + 0.5vw);
   padding-top: calc(1.86667rem + 0.5vw);
   text-align: center; }
   .comments > h3 {
+    margin-bottom: -webkit-calc(1.86667rem + 0.5vw);
     margin-bottom: calc(1.86667rem + 0.5vw); }
 
-/* Author page  ------------------------ */
 .author__avatar {
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   height: 4.8rem;
+  margin-bottom: -webkit-calc(0.93333rem + 0.5vw);
   margin-bottom: calc(0.93333rem + 0.5vw);
   width: 4.8rem; }
 
-/* Search page  ------------------------ */
 .search__form {
+  margin-top: -webkit-calc(1.86667rem + 0.5vw);
   margin-top: calc(1.86667rem + 0.5vw); }
 
 .search__input {
   width: 100%; }
 
-/* Google Custom Search  ------------------------ */
 .gs-webResult {
   border-top: 1px solid #e3e3e3;
   padding-top: 1rem; }
@@ -1093,7 +1132,6 @@ textarea {
   .gsc-table-result td {
     padding: 0; }
 
-/* Required by WYSIWYG editor  ------------------------ */
 .align-left {
   text-align: left; }
 
@@ -1126,21 +1164,22 @@ textarea {
     font-size: 2.8084rem; }
     @media screen and (min-width: 20rem) {
       .dropcap:first-letter {
+        font-size: -webkit-calc(2.8084rem + 1.898 * ((100vw - 20rem) / 113));
         font-size: calc(2.8084rem + 1.898 * ((100vw - 20rem) / 113)); } }
     @media screen and (min-width: 133rem) {
       .dropcap:first-letter {
         font-size: 4.70641rem; } }
 
-/* Pagination ------------------------ */
 @media all and (min-width: 37.5em) {
   .pagination > a {
     margin: 0 0.53333rem 0 0; } }
 
-/* Footer ------------------------ */
 .footer {
   border-top: 1px solid #e3e3e3;
   font-family: "Roboto", sans-serif;
+  margin-top: -webkit-calc(1.86667rem + 0.5vw);
   margin-top: calc(1.86667rem + 0.5vw);
+  padding: -webkit-calc(1.86667rem + 0.5vw) 0;
   padding: calc(1.86667rem + 0.5vw) 0;
   text-align: center; }
   .footer__social > a {
@@ -1148,3 +1187,5 @@ textarea {
     padding: 0 0.53333rem; }
   .footer__copyright + .footer__social {
     margin-top: 1.6rem; }
+
+/*# sourceMappingURL=main.css.map */
