Custom format date fix

--- a/author.hbs
+++ b/author.hbs
@@ -53,12 +53,14 @@
                                     </a>
                                 {{/author}}
                             {{/if}}
-
-                            {{#if @config.custom.frontDate}}
-                                <time datetime="{{date createdAt 'YYYY-MM-DDTHH:mm'}}">
-                                    {{date createdAt @config.custom.formatDate}}
-                                </time>
-                            {{/if}}
+							
+							<time datetime="{{date createdAt 'YYYY-MM-DDTHH:mm'}}">
+								{{#checkIf @config.custom.formatDate '!=' 'custom'}}
+								    {{date createdAt @config.custom.formatDate}}
+								{{else}}
+								    {{date createdAt @config.custom.formatDateCustom}}
+								{{/checkIf}}
+							</time>                           
 
                         </p>
                     {{/checkIfAny}}
