--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -90,6 +90,19 @@
     <script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" aria-dropeffect="" crossorigin="anonymous"></script>
     <script defer src="{{js "scripts.min.js"}}"></script>
 
+    {{#is "post"}}
+       {{#post}}
+          {{#if hasGallery}}
+              {{> photoswipe}}
+          {{/if}}
+      {{/post}}
+    {{/is}}
+    
+    {{#if @renderer.previewMode}}
+        <script defer src="{{js "svg2js.js"}}"></script>
+        <script defer src="{{js "svg-fix.js"}}"></script>
+    {{/if}}
+
     {{{@footerCustomCode}}}
 
 </body>
