--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,6 +243,12 @@ sub,
 sup {
   font-size: 65%; }
 
+hr {
+  border: 0;
+  height: 0;
+  border-top: 1px solid #e3e3e3;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+
 .btn, [type=button],
 [type=submit],
 button {
@@ -471,10 +477,6 @@ textarea {
         grid-template-columns: repeat(6, 1fr); }
         .main--grid > .article {
           grid-column: span 3; } }
-  @media all and (min-width: 37.5em) {
-    .main--no-grid > .article {
-      margin: -webkit-calc(1.86667rem + 0.5vw) 0;
-      margin: calc(1.86667rem + 0.5vw) 0; } }
 
 .sidebar {
   grid-column: 2/3; }
@@ -935,6 +937,19 @@ textarea {
     text-align: center; }
   .post__image--full {
     text-align: center; }
+  .post__video {
+    height: 0;
+    overflow: hidden;
+    padding-top: 1.6rem;
+    padding-bottom: 56.25%;
+    position: relative; }
+    .post__video > iframe {
+      border: none;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%; }
   .post__entry {
     margin-top: -webkit-calc(1.86667rem + 1vw);
     margin-top: calc(1.86667rem + 1vw); }
@@ -1191,5 +1206,69 @@ textarea {
     padding: 0 0.53333rem; }
   .footer__copyright + .footer__social {
     margin-top: 1.6rem; }
+
+.gallery {
+  margin: -webkit-calc(1.6rem + 1vw) -0.53333rem;
+  margin: calc(1.6rem + 1vw) -0.53333rem; }
+  @media all and (min-width: 20em) {
+    .gallery {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; } }
+  @media all and (min-width: 20em) {
+    .gallery[data-columns="1"] .gallery__item {
+      width: 100%; } }
+  @media all and (min-width: 30em) {
+    .gallery[data-columns="2"] .gallery__item {
+      width: 50%; } }
+  @media all and (min-width: 37.5em) {
+    .gallery[data-columns="3"] .gallery__item {
+      width: 33%; } }
+  @media all and (min-width: 56.25em) {
+    .gallery[data-columns="4"] .gallery__item {
+      width: 25%; } }
+  @media all and (min-width: 56.25em) {
+    .gallery[data-columns="5"] .gallery__item {
+      width: 20%; } }
+  @media all and (min-width: 56.25em) {
+    .gallery[data-columns="6"] .gallery__item {
+      width: 16.666%; } }
+  @media all and (min-width: 56.25em) {
+    .gallery[data-columns="7"] .gallery__item {
+      width: 14.285%; } }
+  @media all and (min-width: 56.25em) {
+    .gallery[data-columns="8"] .gallery__item {
+      width: 12.5%; } }
+  .gallery__item {
+    margin: 0;
+    padding: 0.53333rem; }
+    @media all and (min-width: 20em) {
+      .gallery__item {
+        width: 50%; } }
+    @media all and (min-width: 30em) {
+      .gallery__item {
+        width: 33.333%; } }
+    @media all and (min-width: 37.5em) {
+      .gallery__item {
+        width: 25%; } }
+    .gallery__item img {
+      display: block;
+      width: 100%; }
+
+.pswp--dark .pswp__bg {
+  background: black; }
+
+.pswp--light .pswp__bg {
+  background: white; }
+
+.pswp--light .pswp__counter {
+  color: #343434; }
+
+.pswp--light .pswp__caption__center {
+  color: #343434; }
 
 /*# sourceMappingURL=main.css.map */
