--- a/partials/head.hbs
+++ b/partials/head.hbs
@@ -58,9 +58,11 @@
               {{/if}}
            {{/post}}
         {{/is}}
+    {{!-- Insert some custom code by Custom HTML tool --}}
     {{{@headCustomCode}}}
 </head>
 <body>
+    {{!-- Insert some custom code by Custom HTML tool --}}
     {{{@bodyCustomCode}}}
 
     <div class="container">
