--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,12 +243,6 @@ sub,
 sup {
   font-size: 65%; }
 
-hr {
-  border: 0;
-  height: 0;
-  border-top: 1px solid #e3e3e3;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
-
 .btn, [type=button],
 [type=submit],
 button {
@@ -363,45 +357,45 @@ select {
     -webkit-box-shadow: inset 0 0 2px #3949ab;
     box-shadow: inset 0 0 2px #3949ab; }
 
-[type=checkbox],
-[type=radio] {
-  display: none; }
-  [type=checkbox] + label,
-  [type=radio] + label {
-    display: inline-block;
+input[type=checkbox],
+input[type=radio] {
+  opacity: 0;
+  position: absolute; }
+  input[type=checkbox] + label,
+  input[type=radio] + label {
+    position: relative;
+    margin-left: -1px;
     cursor: pointer;
-    top: 0;
-    margin-right: 1.6rem; }
+    padding: 0; }
+    input[type=checkbox] + label:before,
+    input[type=radio] + label:before {
+      background-color: #ffffff;
+      border: 1px solid #d6d6d6;
+      -webkit-border-radius: 2px;
+      border-radius: 2px;
+      content: '';
+      display: inline-block;
+      height: 1.33333rem;
+      line-height: 1.33333rem;
+      margin-right: 1.06667rem;
+      vertical-align: middle;
+      text-align: center;
+      width: 1.33333rem; }
+  input[type=checkbox]:checked + label:before,
+  input[type=radio]:checked + label:before {
+    content: "";
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 8'%3e%3cpolygon points='9.53 0 4.4 5.09 1.47 2.18 0 3.64 2.93 6.54 4.4 8 5.87 6.54 11 1.46 9.53 0' fill='%233949ab'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    -webkit-background-size: 11px 8px;
+    background-size: 11px 8px;
+    background-position: 50% 50%; }
 
-.checkbox:before,
-.radio:before {
-  border: 1px solid #d6d6d6;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  content: "";
-  display: inline-block;
-  height: 1.33333rem;
-  line-height: 1.33333rem;
-  margin-right: 1.06667rem;
-  vertical-align: middle;
-  text-align: center;
-  width: 1.33333rem; }
-
-.radio:before {
+input[type=radio] + label:before {
   -webkit-border-radius: 50%;
   border-radius: 50%; }
 
-[type=checkbox]:checked + .checkbox:before {
-  content: "\2713";
-  color: #3949ab;
-  font-weight: 700; }
-
-[type=radio]:checked + .radio:before {
-  -webkit-box-shadow: inset 0 0 0 4px #ffffff;
-  box-shadow: inset 0 0 0 4px #ffffff;
-  content: "";
-  background: #3949ab;
-  border: 1px solid #d6d6d6; }
+input[type=radio]:checked + label:before {
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3ccircle cx='4' cy='4' r='4' fill='%233949ab'/%3e%3c/svg%3e"); }
 
 [type=file] {
   margin-bottom: 1.6rem;
