Added suprot for {{hasCustomExcerpt}} flag
This flag will allow theme developers to detect when user uses custom excerpt content.

--- a/index.hbs
+++ b/index.hbs
@@ -84,10 +84,11 @@
                    <h2 class="article__title">
                         <a href="{{url}}">{{title}}</a>
                     </h2>
-                    {{#if excerpt}}
-                        <p>{{{excerpt}}}</p>
-                    {{/if}}
-
+                   {{#if hasCustomExcerpt}}
+                        {{{ excerpt }}}
+                   {{else}}
+                        <p>{{{ excerpt }}}</p>
+                   {{/if}}
                     <p class="article__meta u-small">
                         {{#author}}
                             <a href="{{url}}" title="{{name}}">
