--- a/tag-alternative.hbs
+++ b/tag-alternative.hbs
@@ -34,9 +34,11 @@
                         <a href="{{url}}">{{title}}</a>
                     </h2>
 
-                    {{#if excerpt}}
-                        <p>{{{excerpt}}}</p>
-                    {{/if}}
+                   {{#if hasCustomExcerpt}}
+                        {{{ excerpt }}}
+                   {{else}}
+                        <p>{{{ excerpt }}}</p>
+                   {{/if}}
 					
 					<p class="article__meta u-small">						
 						{{#author}}
