--- a/partials/share-buttons.hbs
+++ b/partials/share-buttons.hbs
@@ -39,10 +39,7 @@
 
 {{#if @config.custom.sharePinterest}}
     <a
-        href="https://pinterest.com/pin/create/button/?url={{encodeUrlFragment url}}&amp;media={{encodeUrlFragment featured_image.url}}&amp;description={{encodeUrlFragment title}}"
-        class="js-share pinterest"
-        title="{{ translate 'partials.shareButtons.shareWithPinterest' }}"
-        rel="nofollow">
+        a href="https://pinterest.com/pin/create/button/?url={{encodeUrlFragment url}}&amp;media={{encodeUrlFragment featuredImage.url}}&amp;description={{encodeUrlFragment title}}" class="js-share pinterest" title="{{ translate 'partials.shareButtons.shareWithPinterest' }}" rel="nofollow">
         <svg class="u-icon" aria-hidden="true">
             <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#pinterest"/>
         </svg>
@@ -50,17 +47,13 @@
     </a>
 {{/if}}
 
-{{#if @config.custom.shareStumbleupon}}
-    <a
-        href="http://www.stumbleupon.com/submit?url={{encodeUrlFragment url}}&amp;title={{encodeUrlFragment title}}"
-        class="js-share stumbleupon"
-        title="{{ translate 'partials.shareButtons.shareWithStumbleUpon' }}"
-        rel="nofollow">
-        <svg class="u-icon" aria-hidden="true">
-            <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#stumbleupon"/>
-        </svg>
-		Stumbleupon
-    </a>
+{{#if @config.custom.shareMix}}
+<a href="https://mix.com/add?url={{encodeUrlFragment url}}" class="js-share mix" title="{{ translate 'partials.shareButtons.shareWithMix' }}" rel="nofollow">
+    <svg class="u-icon" aria-hidden="true">
+        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map.svg#mix" />
+    </svg>
+    Mix
+</a>
 {{/if}}
 
 {{#if @config.custom.shareLinkedin}}
